Fixed overlapping background styles; checkin button intelligently appears

--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -1,5 +1,5 @@
-body {
-  background-image: url(./images/japan3_blur.jpg);
+.login {
+  background-image: url(./images/japan_blur.jpg);
   background-position: bottom;
   background-size: cover;
 }
