--- a/src/UserHome.css
+++ b/src/UserHome.css
@@ -1,16 +1,15 @@
-body {
+.userHome {
   background: #fff;
 }
 
 .userHomeContent > .ui.grid {
   margin-left: -242px;
-  
 }
 
 .menuPadLeft {
-  width: calc((100% - 1127px + 66px) / 2) !important;
+  width: calc((100% - 1061px) / 2);
 }
 
 .menuPadMiddle {
-  width: calc(100% / 2 - 312px) !important;
+  width: calc(100% / 2 - 312px);
 }
